# Blood-Donation-Eligibility-Checker

./: CMakeLists.txt  README.md  Test.c  WithSomeInputChecks.c  bash.build  diff_flow.c  main.c  main.cpp
